--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "prebuild": "prisma generate",
     "start": "next start",
     "lint": "next lint",
-    "format": "prettier --write ."
+    "format": "prettier --write ./src"
   },
   "dependencies": {
     "@prisma/client": "^6.10.1",
