--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "prebuild": "prisma generate",
     "start": "next start",
     "lint": "next lint",
-    "format": "prettier --write ./src"
+    "format": "prettier --write ./src",
+    "release": "release-it"
   },
   "dependencies": {
     "@prisma/client": "^6.10.1",
@@ -35,6 +36,7 @@
     "prettier": "^3.6.1",
     "prettier-plugin-tailwindcss": "^0.6.13",
     "prisma": "^6.10.1",
+    "release-it": "^19.0.3",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.4",
     "typescript": "^5"
