--- a/.release-it.json
+++ b/.release-it.json
@@ -7,16 +7,12 @@
     "tagName": "v${version}",
     "commitMessage": "chore(release): v${version}",
     "requireCleanWorkingDir": true,
-    "requireBranch": "master",
+    "requireBranch": "main",
     "push": true,
-    "pushArgs": [
-      "--follow-tags"
-    ]
+    "pushArgs": ["--follow-tags"]
   },
   "hooks": {
-    "before:init": [
-      "next lint"
-    ],
+    "before:init": ["next lint"],
     "after:bump": [
       "npx changelogen@latest --output ./CHANGELOG.MD",
       "echo 'export const RELEASE_VERSION = \"v${version}\";' > ./release-version.ts"
