--- a/package.json
+++ b/package.json
@@ -1,48 +1,57 @@
 {
-  "name": "nextfig",
-  "version": "0.1.4",
-  "private": true,
-  "scripts": {
-    "dev": "next dev ",
-    "build": "next build",
-    "prebuild": "prisma generate",
-    "start": "next start",
-    "lint": "next lint",
-    "format": "prettier --write ./src",
-    "release": "release-it",
-    "test": "echo \"No tests specified\" && exit 0"
-  },
-  "dependencies": {
-    "@prisma/client": "^6.10.1",
-    "better-auth": "^1.2.10",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "lucide-react": "^0.523.0",
-    "next": "15.3.4",
-    "next-safe-action": "^8.0.4",
-    "next-themes": "^0.4.6",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "tailwind-merge": "^3.3.1",
-    "zod": "^3.25.67"
-  },
-  "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
-    "@trivago/prettier-plugin-sort-imports": "^5.2.2",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "15.3.4",
-    "eslint-config-prettier": "^10.1.5",
-    "eslint-plugin-check-file": "^3.3.0",
-    "prettier": "^3.6.1",
-    "prettier-plugin-tailwindcss": "^0.6.13",
-    "prisma": "^6.10.1",
-    "release-it": "^19.0.3",
-    "tailwindcss": "^4",
-    "tw-animate-css": "^1.3.4",
-    "typescript": "^5"
-  }
+    "name": "nextfig",
+    "version": "0.1.4",
+    "private": true,
+    "scripts": {
+        "dev": "next dev ",
+        "build": "next build",
+        "prebuild": "prisma generate",
+        "start": "next start",
+        "lint": "next lint",
+        "format": "prettier --write ./src",
+        "release": "release-it",
+        "test": "echo \"No tests specified\" && exit 0"
+    },
+    "prisma": {
+        "seed": "tsx prisma/seed.ts"
+    },
+    "dependencies": {
+        "@prisma/client": "^6.12.0",
+        "@prisma/extension-accelerate": "^2.0.2",
+        "@radix-ui/react-checkbox": "^1.3.2",
+        "@radix-ui/react-label": "^2.1.7",
+        "@radix-ui/react-slot": "^1.2.3",
+        "better-auth": "^1.2.10",
+        "class-variance-authority": "^0.7.1",
+        "clsx": "^2.1.1",
+        "lucide-react": "^0.523.0",
+        "next": "15.3.4",
+        "next-safe-action": "^8.0.4",
+        "next-themes": "^0.4.6",
+        "react": "^19.0.0",
+        "react-dom": "^19.0.0",
+        "sonner": "^2.0.6",
+        "tailwind-merge": "^3.3.1",
+        "zod": "^3.25.67"
+    },
+    "devDependencies": {
+        "@eslint/eslintrc": "^3",
+        "@tailwindcss/postcss": "^4",
+        "@trivago/prettier-plugin-sort-imports": "^5.2.2",
+        "@types/node": "^20",
+        "@types/react": "^19",
+        "@types/react-dom": "^19",
+        "eslint": "^9",
+        "eslint-config-next": "15.3.4",
+        "eslint-config-prettier": "^10.1.5",
+        "eslint-plugin-check-file": "^3.3.0",
+        "prettier": "^3.6.1",
+        "prettier-plugin-tailwindcss": "^0.6.13",
+        "prisma": "^6.12.0",
+        "release-it": "^19.0.3",
+        "tailwindcss": "^4",
+        "tsx": "^4.20.3",
+        "tw-animate-css": "^1.3.4",
+        "typescript": "^5"
+    }
 }
