--- a/package.json
+++ b/package.json
@@ -13,11 +13,15 @@
         "test": "echo \"No tests specified\" && exit 0"
     },
     "prisma": {
-        "seed": "tsx prisma/seed.ts"
+        "seed": "tsx prisma/seed.ts",
+        "schema": "./prisma"
     },
     "dependencies": {
+        "@midudev/tailwind-animations": "^0.2.0",
         "@prisma/client": "^6.12.0",
         "@prisma/extension-accelerate": "^2.0.2",
+        "@radix-ui/react-accordion": "^1.2.11",
+        "@radix-ui/react-avatar": "^1.1.10",
         "@radix-ui/react-checkbox": "^1.3.2",
         "@radix-ui/react-label": "^2.1.7",
         "@radix-ui/react-slot": "^1.2.3",
@@ -28,6 +32,7 @@
         "next": "15.3.4",
         "next-safe-action": "^8.0.4",
         "next-themes": "^0.4.6",
+        "radix-ui": "^1.4.2",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
         "sonner": "^2.0.6",
