--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "schema": "./prisma"
     },
     "dependencies": {
+        "@hookform/resolvers": "^5.1.1",
         "@midudev/tailwind-animations": "^0.2.0",
         "@prisma/client": "^6.12.0",
         "@prisma/extension-accelerate": "^2.0.2",
@@ -35,9 +36,10 @@
         "radix-ui": "^1.4.2",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
+        "react-hook-form": "^7.60.0",
         "sonner": "^2.0.6",
         "tailwind-merge": "^3.3.1",
-        "zod": "^3.25.67"
+        "zod": "^3.25.76"
     },
     "devDependencies": {
         "@eslint/eslintrc": "^3",
