--- a/package.json
+++ b/package.json
@@ -10,7 +10,13 @@
         "lint": "next lint",
         "format": "prettier --write ./src",
         "release": "release-it",
-        "test": "echo \"No tests specified\" && exit 0"
+        "test": "echo \"No tests specified\" && exit 0",
+        "docker:dev": "docker compose -f docker-compose.yml up -w",
+        "docker:build": "docker compose -f docker-compose.yml build",
+        "docker:up": "docker compose -f docker-compose.yml up -d",
+        "docker:down": "docker compose -f docker-compose.yml down",
+        "docker:logs": "docker compose -f docker-compose.yml logs -f",
+        "docker:ps": "docker compose -f docker-compose.yml ps"
     },
     "prisma": {
         "seed": "tsx prisma/seed.ts",
@@ -26,6 +32,7 @@
         "@radix-ui/react-checkbox": "^1.3.2",
         "@radix-ui/react-label": "^2.1.7",
         "@radix-ui/react-slot": "^1.2.3",
+        "@radix-ui/react-toggle": "^1.1.9",
         "better-auth": "^1.3.3",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
