--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
         "@radix-ui/react-slot": "^1.2.3",
         "@radix-ui/react-toggle": "^1.1.9",
         "@radix-ui/react-tooltip": "^1.2.7",
+        "@tanstack/react-query": "^5.83.0",
+        "@tanstack/react-query-devtools": "^5.83.0",
         "better-auth": "^1.3.3",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
