--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
     "scripts": {
         "dev": "next dev ",
         "build": "next build",
-        "prebuild": "prisma generate",
+        "prebuild": "npm run format && npm run lint && npx prisma db push && npx prisma generate",
         "start": "next start",
         "lint": "next lint",
-        "format": "prettier --write ./src",
+        "format": "prettier --write ./src --config ./.prettierrc.json",
         "release": "release-it",
         "test": "echo \"No tests specified\" && exit 0",
         "docker:dev": "docker compose -f docker-compose.yml up -w",
