--- a/.env
+++ b/.env
@@ -30,3 +30,7 @@ BETTER_AUTH_URL=http://localhost:3000 #Base URL of your app
 
 GOOGLE_CLIENT_ID=your-google-client-id
 GOOGLE_CLIENT_SECRET=your-google-client-secret
+RESEND_API_KEY=re_3EnSUmAY_3XbeRxd7eMbNtYn2uzNuqF6P
+
+GMAIL_API_USER="rabetsyrolio@gmail.com"
+GMAIL_API_PASS="pyvg idbf tpbs ubqb"
