--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "@radix-ui/react-slot": "^1.2.3",
         "@radix-ui/react-toggle": "^1.1.9",
         "@radix-ui/react-tooltip": "^1.2.7",
+        "@react-email/components": "^0.3.2",
         "@tanstack/react-query": "^5.83.0",
         "@tanstack/react-query-devtools": "^5.83.0",
         "better-auth": "^1.3.3",
@@ -46,10 +47,12 @@
         "next": "15.3.4",
         "next-safe-action": "^8.0.4",
         "next-themes": "^0.4.6",
+        "nodemailer": "^7.0.5",
         "radix-ui": "^1.4.2",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
         "react-hook-form": "^7.60.0",
+        "resend": "^4.7.0",
         "sonner": "^2.0.6",
         "tailwind-merge": "^3.3.1",
         "zod": "^3.25.76"
@@ -59,6 +62,7 @@
         "@tailwindcss/postcss": "^4",
         "@trivago/prettier-plugin-sort-imports": "^5.2.2",
         "@types/node": "^20",
+        "@types/nodemailer": "^6.4.17",
         "@types/react": "^19",
         "@types/react-dom": "^19",
         "eslint": "^9",
