--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "0.1.4",
     "private": true,
     "scripts": {
-        "dev": "next dev ",
+        "dev": "next dev --turbopack",
         "build": "next build",
         "prebuild": "npm run format && npm run lint && npx prisma db push && npx prisma generate",
         "start": "next start",
