--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "dependencies": {
         "@hookform/resolvers": "^5.1.1",
         "@midudev/tailwind-animations": "^0.2.0",
+        "@orpc/client": "^1.7.9",
+        "@orpc/server": "^1.7.9",
         "@prisma/client": "^6.12.0",
         "@prisma/extension-accelerate": "^2.0.2",
         "@radix-ui/react-accordion": "^1.2.11",
