--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "@hookform/resolvers": "^5.1.1",
         "@midudev/tailwind-animations": "^0.2.0",
         "@orpc/client": "^1.7.9",
+        "@orpc/contract": "^1.7.9",
         "@orpc/server": "^1.7.9",
         "@prisma/client": "^6.12.0",
         "@prisma/extension-accelerate": "^2.0.2",
@@ -75,6 +76,7 @@
         "prettier": "^3.6.1",
         "prettier-plugin-tailwindcss": "^0.6.13",
         "prisma": "^6.12.0",
+        "prisma-zod-generator": "^1.1.1",
         "release-it": "^19.0.3",
         "tailwindcss": "^4",
         "tsx": "^4.20.3",
