--- a/package.json
+++ b/package.json
@@ -27,7 +27,11 @@
         "@midudev/tailwind-animations": "^0.2.0",
         "@orpc/client": "^1.7.9",
         "@orpc/contract": "^1.7.9",
+        "@orpc/json-schema": "^1.7.9",
+        "@orpc/openapi": "^1.7.9",
         "@orpc/server": "^1.7.9",
+        "@orpc/tanstack-query": "^1.7.9",
+        "@orpc/zod": "^1.7.9",
         "@prisma/client": "^6.12.0",
         "@prisma/extension-accelerate": "^2.0.2",
         "@radix-ui/react-accordion": "^1.2.11",
@@ -52,6 +56,7 @@
         "next-safe-action": "^8.0.4",
         "next-themes": "^0.4.6",
         "nodemailer": "^7.0.5",
+        "nuqs": "^2.4.3",
         "radix-ui": "^1.4.2",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
@@ -59,7 +64,8 @@
         "resend": "^4.7.0",
         "sonner": "^2.0.6",
         "tailwind-merge": "^3.3.1",
-        "zod": "^3.25.76"
+        "zod": "^3.25.76",
+        "zod-prisma-types": "^3.2.4"
     },
     "devDependencies": {
         "@eslint/eslintrc": "^3",
