--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     },
     "dependencies": {
         "@hookform/resolvers": "^5.1.1",
+        "@mantine/hooks": "^8.2.4",
         "@midudev/tailwind-animations": "^0.2.0",
         "@orpc/client": "^1.7.9",
         "@orpc/contract": "^1.7.9",
@@ -51,6 +52,7 @@
         "better-auth": "^1.3.3",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
+        "cmdk": "^1.1.1",
         "lucide-react": "^0.523.0",
         "next": "15.3.4",
         "next-safe-action": "^8.0.4",
