--- a/package.json
+++ b/package.json
@@ -71,9 +71,10 @@
     },
     "devDependencies": {
         "@eslint/eslintrc": "^3",
+        "@faker-js/faker": "^9.9.0",
         "@tailwindcss/postcss": "^4",
         "@trivago/prettier-plugin-sort-imports": "^5.2.2",
-        "@types/node": "^20",
+        "@types/node": "^20.19.10",
         "@types/nodemailer": "^6.4.17",
         "@types/react": "^19",
         "@types/react-dom": "^19",
@@ -87,8 +88,9 @@
         "prisma-zod-generator": "^1.1.1",
         "release-it": "^19.0.3",
         "tailwindcss": "^4",
+        "ts-node": "^10.9.2",
         "tsx": "^4.20.3",
         "tw-animate-css": "^1.3.4",
-        "typescript": "^5"
+        "typescript": "^5.9.2"
     }
 }
