--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "cmdk": "^1.1.1",
+        "dayjs": "^1.11.13",
         "lucide-react": "^0.523.0",
         "next": "15.3.4",
         "next-safe-action": "^8.0.4",
