--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "cmdk": "^1.1.1",
+        "date-fns": "^4.1.0",
         "dayjs": "^1.11.13",
         "lucide-react": "^0.523.0",
         "next": "15.3.4",
@@ -67,6 +68,7 @@
         "nuqs": "^2.4.3",
         "radix-ui": "^1.4.3",
         "react": "^19.0.0",
+        "react-day-picker": "^9.9.0",
         "react-dom": "^19.0.0",
         "react-hook-form": "^7.60.0",
         "resend": "^4.7.0",
